@@ -65,7 +65,7 @@ provides:
         version:         0.050
     System::Info::Darwin:
         file:            lib/System/Info/Darwin.pm
-        version:         0.050
+        version:         0.051
     System::Info::Haiku:
         file:            lib/System/Info/Haiku.pm
         version:         0.050
